--- a/index.html
+++ b/index.html
@@ -1,302 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Amazing Games Studio</title>
+  <meta charset="UTF-8" />
+  <title>Amazing Games Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-:root {
-  --bg: #070b16;
-  --card: #0d1222;
-  --accent: #38bdf8;
-  --text: #ffffff;
-  --muted: #9aa4bf;
-  --green: #22c55e;
-}
+  <style>
+    html { scroll-behavior: smooth; }
 
-* { box-sizing: border-box; }
-body {
-  margin: 0;
-  font-family: Inter, system-ui, sans-serif;
-  background: radial-gradient(circle at top, #0b1025, var(--bg));
-  color: var(--text);
-  scroll-behavior: smooth;
-}
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #020814;
+      color: white;
+    }
 
-section {
-  padding: 100px 8%;
-}
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+      background: rgba(2,8,20,0.8);
+      backdrop-filter: blur(10px);
+    }
 
-/* HERO */
-.hero {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+    nav a {
+      color: #38bdf8;
+      margin: 0 16px;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-.hero img {
-  width: 160px;
-  margin-bottom: 20px;
-}
+    section {
+      padding: 100px 20px;
+      text-align: center;
+    }
 
-.hero h1 {
-  font-size: 4rem;
-  margin: 10px 0;
-}
+    /* HERO */
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background:
+        radial-gradient(circle at center, rgba(56,189,248,0.15), transparent 60%),
+        linear-gradient(#020814, #020814);
+    }
 
-.hero p {
-  max-width: 700px;
-  font-size: 1.2rem;
-  color: var(--muted);
-}
+    .hero-content img {
+      width: 220px;
+      margin-bottom: 30px;
+    }
 
-/* COUNTERS */
-.counters {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  margin-top: 50px;
-}
+    .hero h1 {
+      font-size: 4rem;
+      margin-bottom: 20px;
+    }
 
-.counter {
-  background: rgba(255,255,255,0.04);
-  padding: 30px 40px;
-  border-radius: 16px;
-  text-align: center;
-  min-width: 160px;
-}
+    .hero p {
+      font-size: 1.3rem;
+      max-width: 800px;
+      margin: auto;
+      opacity: 0.9;
+    }
 
-.counter h2 {
-  font-size: 2.5rem;
-  margin: 0;
-}
+    /* COUNTERS */
+    .stats {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 50px;
+      flex-wrap: wrap;
+    }
 
-/* GAMES */
-.games-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
-  gap: 30px;
-}
+    .stat {
+      background: rgba(255,255,255,0.05);
+      padding: 20px 40px;
+      border-radius: 14px;
+    }
 
-.game-card {
-  background: var(--card);
-  border-radius: 18px;
-  overflow: hidden;
-  box-shadow: 0 30px 80px rgba(0,0,0,.5);
-}
+    .stat h3 {
+      font-size: 2rem;
+      margin: 0;
+    }
 
-.game-thumb {
-  aspect-ratio: 16 / 9;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
+    .stat span {
+      opacity: 0.8;
+      font-size: 0.9rem;
+    }
 
-.game-title {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 14px;
-  background: linear-gradient(to bottom, rgba(0,0,0,.7), transparent);
-  text-align: center;
-  font-weight: 700;
-}
+    /* GAMES */
+    .games-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+      max-width: 1000px;
+      margin: auto;
+    }
 
-.game-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 14px 18px;
-  background: #0a0f1f;
-}
+    .game-card {
+      background: rgba(255,255,255,0.05);
+      border-radius: 14px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
 
-.play {
-  background: var(--green);
-  padding: 8px 18px;
-  border-radius: 999px;
-  color: black;
-  font-weight: 700;
-  text-decoration: none;
-}
+    .game-card:hover {
+      transform: translateY(-6px);
+    }
 
-/* APPLY */
-.apply-box {
-  background: var(--card);
-  padding: 40px;
-  border-radius: 20px;
-  margin-bottom: 30px;
-  text-align: center;
-}
+    .game-card img {
+      width: 100%;
+      display: block;
+    }
 
-.apply-box a {
-  display: inline-block;
-  margin-top: 20px;
-  background: var(--accent);
-  padding: 12px 26px;
-  border-radius: 999px;
-  color: black;
-  font-weight: bold;
-  text-decoration: none;
-}
+    .game-card p {
+      padding: 12px;
+      font-weight: bold;
+    }
 
-/* ABOUT */
-.about p {
-  font-size: 1.15rem;
-  line-height: 1.8;
-  max-width: 900px;
-  margin: 20px auto;
-  color: #d0d7ff;
-}
+    /* APPLY */
+    .apply-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      max-width: 900px;
+      margin: auto;
+    }
 
-/* FOOTER */
-footer {
-  text-align: center;
-  padding: 60px 20px;
-}
+    .apply-box {
+      background: rgba(255,255,255,0.05);
+      padding: 30px;
+      border-radius: 16px;
+    }
 
-footer a {
-  margin: 0 15px;
-  color: var(--accent);
-  text-decoration: none;
-  font-weight: 600;
-}
-</style>
+    .apply-box a {
+      display: inline-block;
+      margin-top: 16px;
+      padding: 12px 20px;
+      background: #38bdf8;
+      color: #020814;
+      border-radius: 10px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    /* ABOUT */
+    .about p {
+      font-size: 1.15rem;
+      max-width: 900px;
+      margin: 0 auto 28px;
+      line-height: 1.9;
+      opacity: 0.95;
+    }
+
+    /* CONTACT */
+    .contact-links a {
+      display: inline-block;
+      margin: 20px;
+      color: #38bdf8;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    footer {
+      padding: 40px;
+      opacity: 0.6;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<section class="hero">
-  <img src="logo.png" alt="Amazing Games">
-  <h1>Amazing Games Studio</h1>
-  <p>Building the next generation of front-page Roblox experiences.</p>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#games">Games</a>
+  <a href="#apply">Apply</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <div class="counters">
-    <div class="counter">
-      <h2 id="players">—</h2>
-      <span>Players</span>
-    </div>
-    <div class="counter">
-      <h2 id="visits">—</h2>
-      <span>Total Visits</span>
-    </div>
-    <div class="counter">
-      <h2>3</h2>
-      <span>Games</span>
+<!-- HOME -->
+<section id="home" class="hero">
+  <div class="hero-content">
+    <img src="logo.png" alt="Amazing Games Logo">
+    <h1>Amazing Games Studio</h1>
+    <p>
+      Building high-quality Roblox experiences designed to reach the front page,
+      engage millions of players, and stand the test of time.
+    </p>
+
+    <div class="stats">
+      <div class="stat">
+        <h3>Loading…</h3>
+        <span>Players</span>
+      </div>
+      <div class="stat">
+        <h3>3+</h3>
+        <span>Games</span>
+      </div>
+      <div class="stat">
+        <h3>2025</h3>
+        <span>Founded</span>
+      </div>
     </div>
   </div>
 </section>
 
 <!-- GAMES -->
 <section id="games">
-<h2 style="text-align:center;">Our Games</h2>
-<div class="games-grid" id="gamesGrid"></div>
+  <h2>Our Games</h2>
+  <div class="games-grid">
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=92661235863904&width=768&height=432">
+      <p>🔥 Prison Island</p>
+    </div>
+
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=97441539448665&width=768&height=432">
+      <p>🚪 99 Rooms in a Basement</p>
+    </div>
+
+    <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
+      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=74672529469747&width=768&height=432">
+      <p>🍔 Eat Food To Grow Bigger</p>
+    </div>
+  </div>
 </section>
 
 <!-- APPLY -->
 <section id="apply">
-<h2 style="text-align:center;">Apply</h2>
+  <h2>Apply</h2>
 
-<div class="apply-box">
-  <h3>Want to apply for a job?</h3>
-  <p>Fill out this Google Form to apply to work with Amazing Games.</p>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">Apply for a Job</a>
-</div>
+  <div class="apply-grid">
+    <div class="apply-box">
+      <h3>Apply for a Job</h3>
+      <p>Want to apply for a job? Fill out this Google Form to apply.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
+        Apply for a Job
+      </a>
+    </div>
 
-<div class="apply-box">
-  <h3>Looking for investment?</h3>
-  <p>Submit your game and pitch it to Amazing Games for potential funding.</p>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">Submit Your Game</a>
-</div>
+    <div class="apply-box">
+      <h3>Looking for Investment?</h3>
+      <p>Submit your game and pitch it to Amazing Games for potential investment.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
+        Submit Your Game
+      </a>
+    </div>
+  </div>
 </section>
 
 <!-- ABOUT -->
-<section class="about">
-<h2 style="text-align:center;">About Us</h2>
+<section id="about" class="about">
+  <h2>About Us</h2>
 
-<p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
+  <p>
+    Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission:
+    to invest in, build, and publish amazing games with real front-page potential.
+  </p>
 
-<p>We focus on creating experiences that are not only fun to play, but designed to succeed long-term through strong retention, smart monetization, and replayable gameplay loops.</p>
+  <p>
+    We focus on creating experiences that are not only fun to play, but also designed to succeed long-term
+    through strong retention, smart monetization, and replayable core gameplay loops.
+  </p>
 
-<p>Our studio balances creativity and strategy—clean scripting, polished UI, strong visuals, and monetization that enhances gameplay rather than harms it.</p>
+  <p>
+    Our studio believes great Roblox games come from the balance of creativity and strategy.
+    This means thoughtful game design, clean scripting, polished UI, and monetization that enhances gameplay.
+  </p>
 
-<p>Since our founding, Amazing Games has operated with a long-term mindset: build quality first, learn from every release, and continuously raise our standards. If it’s amazing, we build it.</p>
+  <p>
+    Since our founding, Amazing Games has operated with a long-term mindset:
+    build quality first, learn from every release, and continuously raise our standards.
+    If it’s amazing, we build it.
+  </p>
 </section>
 
-<!-- FOOTER -->
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Get in Touch</h2>
+  <div class="contact-links">
+    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
+      Roblox Group
+    </a>
+  </div>
+</section>
+
 <footer>
-  <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
-  <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
+  © 2025 Amazing Games Studio
 </footer>
-
-<script>
-/* =============================
-   GAME DATA (STATIC)
-============================= */
-const games = [
-  {
-    title: "Prison Island",
-    link: "https://www.roblox.com/games/92661235863904",
-    universeId: 92661235863904
-  },
-  {
-    title: "99 Rooms in a Basement",
-    link: "https://www.roblox.com/games/97441539448665",
-    universeId: 97441539448665
-  },
-  {
-    title: "Eat Food To Grow Bigger",
-    link: "https://www.roblox.com/games/74672529469747",
-    universeId: 74672529469747
-  }
-];
-
-/* =============================
-   FETCH FROM YOUR PROXY
-============================= */
-async function loadGames() {
-  const grid = document.getElementById("gamesGrid");
-
-  for (const game of games) {
-    const res = await fetch(`https://YOUR-PROXY-URL/games/${game.universeId}`);
-    const data = await res.json();
-
-    const card = document.createElement("div");
-    card.className = "game-card";
-    card.innerHTML = `
-      <div class="game-thumb" style="background-image:url('${data.thumbnail}')">
-        <div class="game-title">${game.title}</div>
-      </div>
-      <div class="game-footer">
-        <span>👁 ${data.visits.toLocaleString()}</span>
-        <a class="play" href="${game.link}" target="_blank">Play</a>
-        <span>🟢 ${data.playing}</span>
-      </div>
-    `;
-    grid.appendChild(card);
-  }
-}
-
-/* =============================
-   LIVE COUNTERS (5 MIN)
-============================= */
-async function loadCounters() {
-  const res = await fetch("https://YOUR-PROXY-URL/stats");
-  const data = await res.json();
-  players.innerText = data.players.toLocaleString();
-  visits.innerText = data.visits.toLocaleString();
-}
-
-loadGames();
-loadCounters();
-setInterval(loadCounters, 300000);
-</script>
 
 </body>
 </html>
-
-
