--- a/index.html
+++ b/index.html
@@ -1,178 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Amazing Games Studio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>Amazing Games Studio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    html { scroll-behavior: smooth; }
+<style>
+html { scroll-behavior: smooth; }
 
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #020814;
-      color: white;
-    }
+body {
+  margin: 0;
+  font-family: Inter, Arial, sans-serif;
+  background: radial-gradient(circle at top, #0b1025, #050814);
+  color: white;
+}
 
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      display: flex;
-      justify-content: center;
-      padding: 20px;
-      background: rgba(2,8,20,0.8);
-      backdrop-filter: blur(10px);
-    }
+/* NAV */
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  padding: 18px;
+  background: rgba(5,8,20,0.75);
+  backdrop-filter: blur(10px);
+}
 
-    nav a {
-      color: #38bdf8;
-      margin: 0 16px;
-      text-decoration: none;
-      font-weight: bold;
-    }
+nav a {
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: 700;
+}
 
-    section {
-      padding: 100px 20px;
-      text-align: center;
-    }
+/* SECTIONS */
+section {
+  padding: 120px 8%;
+  text-align: center;
+}
 
-    /* HERO */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background:
-        radial-gradient(circle at center, rgba(56,189,248,0.15), transparent 60%),
-        linear-gradient(#020814, #020814);
-    }
+/* HERO */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    .hero-content img {
-      width: 220px;
-      margin-bottom: 30px;
-    }
+.hero-content img {
+  width: 200px;
+  margin-bottom: 24px;
+}
 
-    .hero h1 {
-      font-size: 4rem;
-      margin-bottom: 20px;
-    }
+.hero h1 {
+  font-size: 4rem;
+  margin: 10px 0;
+}
 
-    .hero p {
-      font-size: 1.3rem;
-      max-width: 800px;
-      margin: auto;
-      opacity: 0.9;
-    }
+.hero p {
+  max-width: 700px;
+  font-size: 1.25rem;
+  opacity: 0.9;
+  margin: auto;
+}
 
-    /* COUNTERS */
-    .stats {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-top: 50px;
-      flex-wrap: wrap;
-    }
+/* STATS */
+.counters {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 50px;
+  flex-wrap: wrap;
+}
 
-    .stat {
-      background: rgba(255,255,255,0.05);
-      padding: 20px 40px;
-      border-radius: 14px;
-    }
+.counter {
+  background: rgba(255,255,255,0.06);
+  padding: 26px 40px;
+  border-radius: 18px;
+}
 
-    .stat h3 {
-      font-size: 2rem;
-      margin: 0;
-    }
+.counter h2 {
+  font-size: 2.6rem;
+  margin: 0;
+}
 
-    .stat span {
-      opacity: 0.8;
-      font-size: 0.9rem;
-    }
+/* GAMES */
+.games-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  gap: 32px;
+}
 
-    /* GAMES */
-    .games-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 30px;
-      max-width: 1000px;
-      margin: auto;
-    }
+.game-card {
+  background: #0d1222;
+  border-radius: 22px;
+  overflow: hidden;
+  box-shadow: 0 30px 80px rgba(0,0,0,.55);
+}
 
-    .game-card {
-      background: rgba(255,255,255,0.05);
-      border-radius: 14px;
-      overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
+.game-thumb {
+  aspect-ratio: 16 / 9;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
 
-    .game-card:hover {
-      transform: translateY(-6px);
-    }
+.game-title {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 14px;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: 800;
+  background: linear-gradient(to bottom, rgba(0,0,0,.75), transparent);
+}
 
-    .game-card img {
-      width: 100%;
-      display: block;
-    }
+.game-footer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 14px 18px;
+  background: #0a0f1f;
+  font-weight: 700;
+}
 
-    .game-card p {
-      padding: 12px;
-      font-weight: bold;
-    }
+.play-btn {
+  background: #22c55e;
+  color: black;
+  padding: 10px 22px;
+  border-radius: 999px;
+  text-decoration: none;
+}
 
-    /* APPLY */
-    .apply-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      max-width: 900px;
-      margin: auto;
-    }
+/* APPLY */
+.apply-box {
+  background: rgba(255,255,255,0.06);
+  padding: 40px;
+  border-radius: 22px;
+  margin: 30px auto;
+  max-width: 600px;
+}
 
-    .apply-box {
-      background: rgba(255,255,255,0.05);
-      padding: 30px;
-      border-radius: 16px;
-    }
+.apply-box a {
+  display: inline-block;
+  margin-top: 18px;
+  padding: 12px 26px;
+  background: #38bdf8;
+  color: black;
+  border-radius: 999px;
+  text-decoration: none;
+  font-weight: 800;
+}
 
-    .apply-box a {
-      display: inline-block;
-      margin-top: 16px;
-      padding: 12px 20px;
-      background: #38bdf8;
-      color: #020814;
-      border-radius: 10px;
-      font-weight: bold;
-      text-decoration: none;
-    }
+/* ABOUT */
+.about p {
+  font-size: 1.15rem;
+  max-width: 900px;
+  margin: 26px auto;
+  line-height: 1.9;
+  opacity: 0.95;
+}
 
-    /* ABOUT */
-    .about p {
-      font-size: 1.15rem;
-      max-width: 900px;
-      margin: 0 auto 28px;
-      line-height: 1.9;
-      opacity: 0.95;
-    }
+/* FOOTER */
+footer {
+  padding: 60px 20px;
+  text-align: center;
+}
 
-    /* CONTACT */
-    .contact-links a {
-      display: inline-block;
-      margin: 20px;
-      color: #38bdf8;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    footer {
-      padding: 40px;
-      opacity: 0.6;
-      font-size: 0.9rem;
-    }
-  </style>
+footer a {
+  margin: 0 18px;
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: 700;
+}
+</style>
 </head>
 
 <body>
@@ -190,23 +194,20 @@
   <div class="hero-content">
     <img src="logo.png" alt="Amazing Games Logo">
     <h1>Amazing Games Studio</h1>
-    <p>
-      Building high-quality Roblox experiences designed to reach the front page,
-      engage millions of players, and stand the test of time.
-    </p>
+    <p>Building high-quality Roblox experiences designed to reach the front page.</p>
 
-    <div class="stats">
-      <div class="stat">
-        <h3>Loading…</h3>
-        <span>Players</span>
+    <div class="counters">
+      <div class="counter">
+        <h2 id="totalPlayers">—</h2>
+        <span>Players Online</span>
       </div>
-      <div class="stat">
-        <h3>3+</h3>
+      <div class="counter">
+        <h2 id="totalVisits">—</h2>
+        <span>Total Visits</span>
+      </div>
+      <div class="counter">
+        <h2>3</h2>
         <span>Games</span>
-      </div>
-      <div class="stat">
-        <h3>2025</h3>
-        <span>Founded</span>
       </div>
     </div>
   </div>
@@ -215,44 +216,27 @@
 <!-- GAMES -->
 <section id="games">
   <h2>Our Games</h2>
-  <div class="games-grid">
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/92661235863904/Prison-Island')">
-      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=92661235863904&width=768&height=432">
-      <p>🔥 Prison Island</p>
-    </div>
-
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/97441539448665/99-Rooms-in-a-basement')">
-      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=97441539448665&width=768&height=432">
-      <p>🚪 99 Rooms in a Basement</p>
-    </div>
-
-    <div class="game-card" onclick="window.open('https://www.roblox.com/games/74672529469747/Eat-Food-To-Grow-Bigger')">
-      <img src="https://www.roblox.com/asset-thumbnail/image?assetId=74672529469747&width=768&height=432">
-      <p>🍔 Eat Food To Grow Bigger</p>
-    </div>
-  </div>
+  <div class="games-grid" id="gamesGrid"></div>
 </section>
 
 <!-- APPLY -->
 <section id="apply">
   <h2>Apply</h2>
 
-  <div class="apply-grid">
-    <div class="apply-box">
-      <h3>Apply for a Job</h3>
-      <p>Want to apply for a job? Fill out this Google Form to apply.</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
-        Apply for a Job
-      </a>
-    </div>
+  <div class="apply-box">
+    <h3>Apply for a Job</h3>
+    <p>Want to apply for a job? Fill out this Google Form to apply.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">
+      Apply for a Job
+    </a>
+  </div>
 
-    <div class="apply-box">
-      <h3>Looking for Investment?</h3>
-      <p>Submit your game and pitch it to Amazing Games for potential investment.</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
-        Submit Your Game
-      </a>
-    </div>
+  <div class="apply-box">
+    <h3>Looking for Investment?</h3>
+    <p>Submit your game and pitch it to Amazing Games for potential investment.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">
+      Submit Your Game
+    </a>
   </div>
 </section>
 
@@ -260,42 +244,62 @@
 <section id="about" class="about">
   <h2>About Us</h2>
 
-  <p>
-    Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission:
-    to invest in, build, and publish amazing games with real front-page potential.
-  </p>
+  <p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
 
-  <p>
-    We focus on creating experiences that are not only fun to play, but also designed to succeed long-term
-    through strong retention, smart monetization, and replayable core gameplay loops.
-  </p>
+  <p>We focus on creating experiences designed to succeed long-term through strong retention, smart monetization, and replayable gameplay loops.</p>
 
-  <p>
-    Our studio believes great Roblox games come from the balance of creativity and strategy.
-    This means thoughtful game design, clean scripting, polished UI, and monetization that enhances gameplay.
-  </p>
+  <p>Our studio balances creativity and strategy—clean scripting, polished UI, strong visuals, and monetization that enhances gameplay.</p>
 
-  <p>
-    Since our founding, Amazing Games has operated with a long-term mindset:
-    build quality first, learn from every release, and continuously raise our standards.
-    If it’s amazing, we build it.
-  </p>
+  <p>If it’s amazing, we build it.</p>
 </section>
 
 <!-- CONTACT -->
 <section id="contact">
   <h2>Get in Touch</h2>
-  <div class="contact-links">
-    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Join Our Discord</a>
-    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">
-      Roblox Group
-    </a>
-  </div>
+  <footer>
+    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
+  </footer>
 </section>
 
-<footer>
-  © 2025 Amazing Games Studio
-</footer>
+<script>
+const WORKER_URL = "https://YOUR-WORKER-NAME.workers.dev";
+
+async function loadGames() {
+  const res = await fetch(WORKER_URL);
+  const json = await res.json();
+
+  let totalPlayers = 0;
+  let totalVisits = 0;
+
+  const grid = document.getElementById("gamesGrid");
+  grid.innerHTML = "";
+
+  json.data.forEach(game => {
+    totalPlayers += game.playing;
+    totalVisits += game.visits;
+
+    grid.innerHTML += `
+      <div class="game-card">
+        <div class="game-thumb" style="background-image:url('https://tr.rbxcdn.com/${game.rootPlaceId}/768/432/Image/Png')">
+          <div class="game-title">${game.name}</div>
+        </div>
+        <div class="game-footer">
+          <div>👥 ${game.playing}</div>
+          <a class="play-btn" href="https://www.roblox.com/games/${game.rootPlaceId}" target="_blank">▶ PLAY</a>
+          <div>👁 ${game.visits.toLocaleString()}</div>
+        </div>
+      </div>
+    `;
+  });
+
+  document.getElementById("totalPlayers").innerText = totalPlayers.toLocaleString();
+  document.getElementById("totalVisits").innerText = totalVisits.toLocaleString();
+}
+
+loadGames();
+setInterval(loadGames, 5 * 60 * 1000);
+</script>
 
 </body>
 </html>
