--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@ html { scroll-behavior: smooth; }
 body {
   margin: 0;
   font-family: Inter, Arial, sans-serif;
-  background: radial-gradient(circle at top, #0b1025, #050814);
   color: white;
+  background:
+    radial-gradient(circle at 50% 20%, rgba(0,180,255,.18), transparent 55%),
+    radial-gradient(circle at 80% 70%, rgba(120,0,255,.14), transparent 60%),
+    linear-gradient(180deg, #050b1d, #020617 65%);
 }
 
 /* NAV */
@@ -23,16 +26,16 @@ nav {
   z-index: 1000;
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: 28px;
   padding: 18px;
-  background: rgba(5,8,20,0.75);
-  backdrop-filter: blur(10px);
+  background: rgba(5,8,20,.75);
+  backdrop-filter: blur(12px);
 }
 
 nav a {
   color: #38bdf8;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 /* SECTIONS */
@@ -50,19 +53,20 @@ section {
 }
 
 .hero-content img {
-  width: 200px;
-  margin-bottom: 24px;
+  width: 160px;
+  margin-bottom: 18px;
+  filter: drop-shadow(0 0 24px rgba(56,189,248,.45));
 }
 
 .hero h1 {
-  font-size: 4rem;
-  margin: 10px 0;
+  font-size: 4.2rem;
+  margin: 12px 0;
 }
 
 .hero p {
-  max-width: 700px;
+  max-width: 720px;
   font-size: 1.25rem;
-  opacity: 0.9;
+  opacity: .9;
   margin: auto;
 }
 
@@ -70,15 +74,17 @@ section {
 .counters {
   display: flex;
   justify-content: center;
-  gap: 40px;
-  margin-top: 50px;
+  align-items: center;
+  gap: 26px;
+  margin-top: 42px;
   flex-wrap: wrap;
 }
 
 .counter {
-  background: rgba(255,255,255,0.06);
-  padding: 26px 40px;
-  border-radius: 18px;
+  background: rgba(255,255,255,.07);
+  padding: 26px 42px;
+  border-radius: 20px;
+  backdrop-filter: blur(8px);
 }
 
 .counter h2 {
@@ -89,15 +95,21 @@ section {
 /* GAMES */
 .games-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-  gap: 32px;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  gap: 36px;
+  margin-top: 60px;
 }
 
 .game-card {
-  background: #0d1222;
-  border-radius: 22px;
+  background: linear-gradient(180deg, #0d1222, #090e1d);
+  border-radius: 26px;
   overflow: hidden;
-  box-shadow: 0 30px 80px rgba(0,0,0,.55);
+  box-shadow: 0 40px 90px rgba(0,0,0,.6);
+  transition: transform .25s ease;
+}
+
+.game-card:hover {
+  transform: translateY(-6px);
 }
 
 .game-thumb {
@@ -112,9 +124,8 @@ section {
   top: 0;
   width: 100%;
   padding: 14px;
-  text-align: center;
-  font-size: 1.3rem;
-  font-weight: 800;
+  font-size: 1.35rem;
+  font-weight: 900;
   background: linear-gradient(to bottom, rgba(0,0,0,.75), transparent);
 }
 
@@ -122,37 +133,38 @@ section {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  padding: 14px 18px;
-  background: #0a0f1f;
-  font-weight: 700;
+  padding: 16px 20px;
+  background: #080d1b;
+  font-weight: 800;
 }
 
 .play-btn {
   background: #22c55e;
   color: black;
-  padding: 10px 22px;
+  padding: 10px 26px;
   border-radius: 999px;
   text-decoration: none;
+  font-weight: 900;
 }
 
 /* APPLY */
 .apply-box {
-  background: rgba(255,255,255,0.06);
-  padding: 40px;
-  border-radius: 22px;
-  margin: 30px auto;
-  max-width: 600px;
+  background: rgba(255,255,255,.06);
+  padding: 42px;
+  border-radius: 26px;
+  margin: 32px auto;
+  max-width: 640px;
 }
 
 .apply-box a {
   display: inline-block;
   margin-top: 18px;
-  padding: 12px 26px;
+  padding: 14px 30px;
   background: #38bdf8;
   color: black;
   border-radius: 999px;
   text-decoration: none;
-  font-weight: 800;
+  font-weight: 900;
 }
 
 /* ABOUT */
@@ -161,7 +173,7 @@ section {
   max-width: 900px;
   margin: 26px auto;
   line-height: 1.9;
-  opacity: 0.95;
+  opacity: .95;
 }
 
 /* FOOTER */
@@ -171,10 +183,10 @@ footer {
 }
 
 footer a {
-  margin: 0 18px;
+  margin: 0 20px;
   color: #38bdf8;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 800;
 }
 </style>
 </head>
@@ -199,15 +211,15 @@ footer a {
     <div class="counters">
       <div class="counter">
         <h2 id="totalPlayers">—</h2>
-        <span>Players Online</span>
+        <span>👥 Players Online</span>
       </div>
       <div class="counter">
         <h2 id="totalVisits">—</h2>
-        <span>Total Visits</span>
+        <span>👁️ Total Visits</span>
       </div>
       <div class="counter">
         <h2>3</h2>
-        <span>Games</span>
+        <span>🎮 Games</span>
       </div>
     </div>
   </div>
@@ -243,14 +255,9 @@ footer a {
 <!-- ABOUT -->
 <section id="about" class="about">
   <h2>About Us</h2>
-
   <p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
-
-  <p>We focus on creating experiences designed to succeed long-term through strong retention, smart monetization, and replayable gameplay loops.</p>
-
-  <p>Our studio balances creativity and strategy—clean scripting, polished UI, strong visuals, and monetization that enhances gameplay.</p>
-
-  <p>If it’s amazing, we build it.</p>
+  <p>We focus on strong retention, polished UI, clean scripting, and monetization that enhances gameplay.</p>
+  <p>If it’s amazing — we build it.</p>
 </section>
 
 <!-- CONTACT -->
@@ -263,7 +270,8 @@ footer a {
 </section>
 
 <script>
-const WORKER_URL = "https://YOUR-WORKER-NAME.workers.dev";
+/* 🔴 CHANGE THIS TO YOUR WORKER URL */
+const WORKER_URL = "https://api.amazinggames.cloud/stats";
 
 async function loadGames() {
   const res = await fetch(WORKER_URL);
